k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: udc-bot-dev
  labels:
    app.kubernetes.io/part-of: udc-bot
    environment: dev
