k8s/dev/phpmyadmin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: udc-bot-dev
  labels:
    app.kubernetes.io/name: phpmyadmin
    app.kubernetes.io/part-of: udc-bot
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: phpmyadmin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: phpmyadmin
        app.kubernetes.io/part-of: udc-bot
        environment: dev
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin:5.2.3
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: udc-bot-dev
  labels:
    app.kubernetes.io/name: phpmyadmin
    app.kubernetes.io/part-of: udc-bot
    environment: dev
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: phpmyadmin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin
  namespace: udc-bot-dev
  labels:
    app.kubernetes.io/name: phpmyadmin
    app.kubernetes.io/part-of: udc-bot
    environment: dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-ip-allowlist@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - phpmyadmin.dev.bot.udc.ovh
      secretName: phpmyadmin-dev-tls
  rules:
    - host: phpmyadmin.dev.bot.udc.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phpmyadmin
                port:
                  number: 80
